@@ -58,7 +58,6 @@ static const int MAX_LOG_LENGTH = 16*1024;
  @brief Output Debug message.
  */
 void CC_DLL log(const char * format, ...) CC_FORMAT_PRINTF(1, 2);
-void CC_DLL log(const char * format, va_list args);
 
 /** Console is helper class that lets the developer control the game from TCP connection.
  Console will spawn a new thread that will listen to a specified TCP port.
